--- a/src/Pages/Home/Projects/Projects.css
+++ b/src/Pages/Home/Projects/Projects.css
@@ -10,3 +10,14 @@
 .mySwiper {
   height: 500px !important;
 }
+@media screen and (min-width: 640px) {
+  .swiper-container {
+    width: 640px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .swiper-container {
+    width: 1024px;
+  }
+}
